fix visual bug (overflow)

--- a/src/SCSS/Page01.scss
+++ b/src/SCSS/Page01.scss
@@ -57,7 +57,7 @@
 .planetNameLinks {
     display: inline;
     text-transform: uppercase;
-    margin: 0 .5rem;
+    margin: 0 .75rem;
     font-family: 'Barlow Condensed';
     font-style: normal;
     font-weight: 400;
@@ -139,9 +139,9 @@
 }
 
 #imgDetails01 {
-    height: 45%;
+    height: 40%;
 }
 
 #textDetails01 {
-    height: 40%;
+    height: 45%;
 }
